# arrisca

./: .gitignore  README.md
Arrisca/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  reorganize.sh
Arrisca/apps/agents/: area_agent.py  orchestrator.py
Arrisca/apps/api/: deps.py
Arrisca/apps/api/routers/: documents.py  me.py
Arrisca/apps/worker/ingestion/: celery_app.py  pipeline.py
Arrisca/core/services/: audit.py  retrieval.py  supabase_auth.py  user_context.py
Arrisca/docs/backend/: Backend.md
Arrisca/docs/frontend/: 01-visao-geral-e-arquitetura.md  02-design-system.md  03-autenticacao-e-rbac.md  04-chat-e-streaming.md  05-paginas-e-fluxos.md  06-dados-estado-e-contratos.md  07-qualidade-testes-e-performance.md  README.md
files (10)/: permissions.py  retrieval .py
files (10)/apps/agents/: transport_agent.py
files (10)/apps/api/: main.py
files (10)/apps/api/routers/: admin.py  conversations.py
files (10)/apps/worker/ingestion/: __init__.py  celery_app.py
files (10)/core/db/: pool.py
files (10)/migrations/: 001_initial_schema.sql
