[project]
name = "arrisca-saas"
version = "0.1.0"
description = "Chat conversacional com IA para o Grupo Arrisca"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.1.3",
    # DB
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    # Auth
    "pyjwt[crypto]>=2.10.0",
    # LLM e embeddings
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "tiktoken>=0.8.0",
    # HTTP cliente para tools externas
    "httpx>=0.28.0",
    # Workers
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    # Extração de documentos
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    # Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
s3 = [
    "aioboto3>=13.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
